Implemented isAttacked method in King.java.