@@ -2,6 +2,8 @@ package main.java.model.pieces;
 
 import main.java.ChessCoordinate;
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -29,11 +31,10 @@ public class Rook extends Piece {
      * @return the set of movement rules of this Rook.
      */
     private Set<MovementRule> getMovementRules() {
-        return Set.of(
-                new MovementRule(new Direction(1, 0), 8, STANDARD_MOVE_MAKER),
-                new MovementRule(new Direction(-1, 0), 8, STANDARD_MOVE_MAKER),
-                new MovementRule(new Direction(0, 1), 8, STANDARD_MOVE_MAKER),
-                new MovementRule(new Direction(0, -1), 8, STANDARD_MOVE_MAKER)
-        );
+        Set<MovementRule> movementRules = new HashSet<>();
+        for (Direction direction : Directions.STRAIGHTS.directions) {
+            movementRules.add(new MovementRule(direction, LONG_MOVING_MAX, STANDARD_MOVE_MAKER));
+        }
+        return Collections.unmodifiableSet(movementRules);
     }
 }
